--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lucide-react": "^0.554.0",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.4.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router": "6.28.0",
+    "react-router-dom": "6.28.0",
+    "@remix-run/router": "1.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
